# dob

./: .coveragerc  .editorconfig  .flake8  .gitignore  .ignore  .ignore.example  .isort.cfg  .readthedocs.yml  .travis.yml  AUTHORS.rst  CODE-OF-CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  Makefile.local.example  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
dob/: __init__.py  app_config.py  cmd_common.py  cmd_config.py  cmd_options.py  complete.py  config.py  controller.py  copyright.py  create.py  demo.py  details.py  dob.py  hamster_cli.py  help_strings.py  interrogate.py  migrate.py  plugins.py  run_cli.py  settings.py  transcode.py  update.py
dob/clickux/: __init__.py  _ansitextwrap.py  add_fact_help_group.py  aliasable_bunchy_plugin.py  better_format_usage.py  better_help_headers.py  bunchy_group.py  bunchy_help.py  click_aliasable_bunchy_plugin.py  cmd_common.py  cmd_config.py  cmd_option_dynamic_help.py  cmd_options.py  cmd_options_search.py  echo_assist.py  file_enforce.py  help_command.py  help_detect.py  help_header.py  help_string_add_fact.py  help_strings.py  induct_newbies.py  plugin_group.py  plugins.py  post_processor.py  query_assist.py
dob/cmd_interface/: bunchy_help.py  click_aliasable_bunchy_plugin.py  cmd_common.py  help_strings.py
dob/cmds_list/: __init__.py  activity.py  category.py  fact.py  tag.py
dob/cmds_usage/: __init__.py  activity.py  category.py  tag.py
dob/config/: __init__.py  app_dirs.py  commands.py  fileboss.py  inify.py  key_chained_val.py  log_levels.py  manage.py  subscriptable.py  urable.py
dob/facts/: __init__.py  add_fact.py  cancel_fact.py  echo_fact.py  edit_fact.py  export_facts.py  import_facts.py  save_backedup.py  save_confirmed.py  save_confirmer.py  simple_prompts.py
dob/facts_format/: __init__.py  factoid.py  journal.py  tabular.py
dob/helpers/: __init__.py  ascii_art.py  ascii_table.py  crude_progress.py  emphasis.py  exceptions.py  fact_dressed.py  facts_diff.py  fix_times.py  format_fact.py  path.py  ppt_markup.py  re_actegory.py  re_confirm.py
docs/: Makefile  code-of-conduct.rst  concepts.rst  conf.py  contributing.rst  dob.clickux.rst  dob.cmds_list.rst  dob.cmds_usage.rst  dob.config.rst  dob.facts.rst  dob.helpers.rst  dob.prompters.rst  dob.rst  guide-combinations.rst  guide-config.rst  guide-copy-paste.rst  guide-editing-facts.rst  guide-editor-env.rst  guide-exit-save-undoredo.rst  guide-intro-cli-and-editor.rst  guide-jumping-around.rst  guide-nudging-time.rst  history-ci.md  history-hamster-cli.rst  index.rst  installation.rst  license.rst  make.bat  modules.rst  usage.rst
hamster_cli/: __init__.py  cmd_common.py  cmd_config.py  cmd_options.py  complete.py  create.py  details.py  hamster_cli.py  help_strings.py  migrate.py  search.py  transcode.py  update.py
hamster_cli/cmds_list/: __init__.py  activity.py  category.py  fact.py  tag.py
hamster_cli/cmds_usage/: __init__.py  activity.py  category.py  tag.py
hamster_cli/helpers/: __init__.py  ascii_table.py
man/: Makefile  README.md  dob.1  dob.1.ronn  hamster.1  hamster.1.ronn
requirements/: dev.pip  docs.pip  release.pip  test.pip  ultra-editable.pip.example  ultra-pluggable.pip.example
tests/: __init__.py  cli_runner.py  conftest.py  dob_runner.py  factories.py  test_carousel.py  test_copyright.py  test_details.py  test_dob.py  test_hamster_cli.py  test_integration_tests.py  test_write_facts_file.py
tests/clickux/: __init__.py
tests/cmds_list/: __init__.py  test_activity.py  test_category.py  test_fact.py
tests/cmds_usage/: __init__.py
tests/facts/: __init__.py  test_add_fact.py  test_cancel_fact.py  test_echo_fact.py  test_export_facts.py  test_save_backedup.py
tests/facts_format/: __init__.py  test_tabular.py
tests/fixtures/: README.rst  test-import-fixture.rst
tests/helpers/: __init__.py
