# This file is part of 'dob'.
#
# 'dob' is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# 'dob' is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with 'dob'.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
license_file = LICENSE

# ***

[bumpversion]
current_version = 3.0.0a31
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:dob/__init__.py]

[bumpversion:file:docs/conf.py]

[coverage:report]
precision = 0
exclude_lines =
	if __name__ == .__main__.:

[coverage:run]
branch = True
source = dob

[doc8]
ignore-path = .eggs/, *.egg-info/, .tox/, docs/_build/
max-line-length=89
# Specify encoding lest doc8 think it's 'Windows-1254' and raise UnicodeDecodeError.
file-encoding=utf-8
# DEVs: Uncomment verbose for TMI.
#  verbose=1

# Babel i18n/l10n configuration.
#
# USAGE:
#
#   pip install Babel
#   python setup.py extract_messages
#
# SEE ALSO:
#
#   http://babel.pocoo.org/en/latest/setup.html#extract-messages
#
[extract_messages]
input_dirs = dob
# FIXME/2018-04-22: (lb): Add locale files.
#output_file = dob/locale/dob.pot
output_file = messages.pot

[flake8]
exclude = build/*.py, docs/*.py
max-line-length = 89
# See list of error codes:
#  https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# Some of these are necessary, and some are just preferences.
# - E711 comparison to None should be 'if cond is None:'
#   (lb): SQLAlchemy filter function honors `== None`, not `is None`, e.g.,
#           query = query.filter(AlchemyFact.activity == None)
# - W391: blank line at end of file
#   (lb): Personal preference. So that, e.g., Ctrl-End is predictable and
#   goes to first column of last line, which is empty; as opposed to going
#   to some unknown last column of a nonempty last line.
# - W503 line break before binary operator
#   (lb): I'm with Knuth, for readability. Prefer this:
#       if (some_thing
#           and another):
#           and another_thing):
#     over this:
#       if (some_thing and
#           another and
#           another_thing):
# - W605 invalid escape sequence
#   (lb): Happening on help strings (for Click), e.g., 'blah \# blah' flagged.
ignore = W391,W503,W605

[isort]
not_skip = __init__.py
known_third_party = appdirs, backports, click, faker, factory, fauxfactory, freezegun, future, nark, past, pytest, pytest_factoryboy, six, tabulate

[tool:pytest]
addopt =
	--tb=short
	--strict
	--rsx

[wheel]
universal = 1

