# This file is part of 'dob'.
#
# 'dob' is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# 'dob' is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with 'dob'.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
# NOTE: Values specified in setup.py will shadow those here.
#   Except there are no values in setup().
name = dob
author = HotOffThe Hamster
author-email = hotoffthehamster+dob@gmail.com
home-page = https://github.com/hotoffthehamster/dob
description = journal and time tracker, supercharged for the terminal
# (lb): Note that - and _ and interchangeable, e.g.,
#         long-description is the
# same as long_description.
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    # Bug Tracker = https://bugs.launchpad.net/dob/
    Documentation = https://dob.readthedocs.io/en/latest/
    Source Code = https://github.com/hotoffthehamster/dob
license = GPLv3+
license-file = LICENSE
platform = any
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    # FIXME/2018-06-13: Our goal (this Summer?): Production/Stable.
    # Development Status :: 2 - Pre-Alpha
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python
    # Topic :: Artistic Software
    Topic :: Office/Business :: News/Diary
    # Topic :: Religion  # Because Hamster *is* is religion!
    Topic :: Text Processing
keywords =
    journal
    diary
    timesheet
    timetrack
    jrnl
    rednotebook
    todo.txt
    prjct
    hamster
    fact

[options.entry_points]
console_scripts =
    # <app>=<pkg>.<cls>.run
    dob = dob.dob:run

[options]
zip_safe = false
# Enable setuptools_scm/use_scm_version.
setup_requires =
    setuptools
    setuptools_scm

# ***

[coverage:report]
precision = 0
exclude_lines =
	if __name__ == .__main__.:

[coverage:run]
branch = True
source = dob

[doc8]
ignore-path = .eggs/, *.egg-info/, .tox/, docs/_build/, tests/fixtures/
max-line-length = 89
# Specify encoding lest doc8 think it's 'Windows-1254' and raise UnicodeDecodeError.
file-encoding = utf-8
# DEVs: Uncomment verbose for TMI.
#  verbose=1

# Babel i18n/l10n configuration.
#
# USAGE:
#
#   pip install Babel
#   python setup.py extract_messages
#
# SEE ALSO:
#
#   http://babel.pocoo.org/en/latest/setup.html#extract-messages
#
[extract_messages]
input_dirs = dob
# FIXME/2018-04-22: (lb): Add locale files.
#output_file = dob/locale/dob.pot
output_file = messages.pot

[flake8]
exclude = build/*.py, docs/*.py
max-line-length = 89
# See list of error codes:
#  https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# Some of these are necessary, and some are just preferences.
# - E711 comparison to None should be 'if cond is None:'
#   (lb): SQLAlchemy filter function honors `== None`, not `is None`, e.g.,
#           query = query.filter(AlchemyFact.activity == None)
# - W391: blank line at end of file
#   (lb): Personal preference. So that, e.g., Ctrl-End is predictable and
#   goes to first column of last line, which is empty; as opposed to going
#   to some unknown last column of a nonempty last line.
# - W503 line break before binary operator
#   (lb): I'm with Knuth, for readability. Prefer this:
#       if (some_thing
#           and another):
#           and another_thing):
#     over this:
#       if (some_thing and
#           another and
#           another_thing):
# - W605 invalid escape sequence
#   (lb): Happening on help strings (for Click), e.g., 'blah \# blah' flagged.
ignore = W391,W503,W605

[isort]
# See: setup.cfg's [flake8] max-line-length = 89.
line_length = 89
# multi_line_output: 3 - Vertical Hanging Indent.
multi_line_output = 3
not_skip = __init__.py
known_third_party =
    # SYNC_ME: setup.py:requirements
    ansiwrap
    appdirs
    #backports
    click
    click-alias
    colorama
    configobj
    future
    inflector
    humanfriendly
    pedantic_timedelta
    lazy_import
    nark
    prompt_toolkit
    editor
    # FIXME/2020-01-05 17:38: Remove references to 'six'!
    six
    tabulate
    texttable
    # Testing packages.
    faker
    factory
    fauxfactory
    freezegun
    #past
    pytest
    pytest_factoryboy
# (lb): I tried putting gettext-as-_ after future imports, but the following
# config ends up with the import at end of STDLIB (default), so docs lie?
#   known_gettext=gettext
#   sections = FUTURE,GETTEXT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Alternative is to use unused known group and place after blank link after stdlibs.
known_first_party = gettext
sections = FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[tool:pytest]
addopt =
	--tb=short
	--strict
	--rsx

[bdist_wheel]
universal = 1

