# This file exists within 'dob':
#
#   https://github.com/hotoffthehamster/dob
#
# Copyright © 2018-2020 Landon Bouma,  2015-2016 Eric Goller.  All rights reserved.
#
# 'dob' is free software: you can redistribute it and/or modify it under the terms
# of the GNU General Public License  as  published by the Free Software Foundation,
# either version 3  of the License,  or  (at your option)  any   later    version.
#
# 'dob' is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY  or  FITNESS FOR A PARTICULAR
# PURPOSE.  See  the  GNU General Public License  for  more details.
#
# You can find the GNU General Public License reprinted in the file titled 'LICENSE',
# or visit <http://www.gnu.org/licenses/>.

# (lb): Note that using `-` or `_` in key names is interchangeable, e.g.,
#         long-description is the
# same as long_description.

[metadata]
# NOTE: Values specified in setup.py will shadow those here.
#       (Although there are very few values left in setup().)
name = dob
author = HotOffThe Hamster
author-email = hotoffthehamster+dob@gmail.com
home-page = https://github.com/hotoffthehamster/dob
description = journal and time tracker, supercharged for the terminal
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    # Bug Tracker = https://bugs.launchpad.net/dob/
    Documentation = https://dob.readthedocs.io/en/latest/
    Source Code = https://github.com/hotoffthehamster/dob
license = GPLv3+
license-file = LICENSE
platform = any
# https://pypi.org/classifiers/
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python
    # Topic :: Artistic Software
    Topic :: Office/Business :: News/Diary
    # Topic :: Religion  # Because Hamster *is* a religion!
    Topic :: Text Processing
# Keywords for PyPI to display, and to use for search results.
keywords =
    journal
    diary
    timesheet
    timetrack
    jrnl
    rednotebook
    todo.txt
    prjct
    hamster
    fact

[options.entry_points]
console_scripts =
    # <app>=<pkg>.<cls>.run
    dob = dob.dob:run

[options]
# WIP/2020-01-24: (lb): setuptools RTD says to determine for one's DEVself
# if a project can run from zip, or must be installed to a directory, so
# here we go: Trying zip_safe = true until it blows up or takes off!
#   https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
# - Supposedly bdist_egg indicates zip-safetyness, however:
#
#       $ python setup.py bdist_egg
#       ...
#
#       # I see the same 'not-zip-safe' lines whether zip_safe = true or false.
#       #
#       $ python setup.py -v bdist_egg | grep zip
#       copying dob.egg-info/not-zip-safe -> build/bdist.linux-x86_64/egg/EGG-INFO
#       adding 'EGG-INFO/not-zip-safe'
#
#       # Except when zip_safe = false, I see a 'zip-safe' file:
#       #
#       $ xxd dob.egg-info/zip-safe
#       00000000: 0a            .
#
#       # And then when zip_safe = true, I see a 'not-zip-safe' file:
#       #
#       $ xxd dob.egg-info/not-zip-safe
#       00000000: 0a            .
#
#   so I guess we'll have to commit, publish to test.PyPI, and find out the long way.
# FIXME/FOLLOW-UP/2020-01-24: After next PyPI release test:
#                             - Maybe set zip_safe = false.
#                             - Definitely cleanup this comment.
zip_safe = false
# Enable setuptools_scm's use_scm_version.
setup_requires =
    setuptools
    setuptools_scm

[coverage:report]
precision = 0
exclude_lines =
    if __name__ == .__main__.:

[coverage:run]
branch = True
source = dob

[doc8]
ignore-path = .eggs/, *.egg-info/, .tox/, docs/_build/, tests/fixtures/
max-line-length = 89
# Specify encoding lest doc8 think it's 'Windows-1254' and raise UnicodeDecodeError.
file-encoding = utf-8
# DEVs: Uncomment verbose for TMI.
#  verbose=1

# Babel i18n/l10n configuration.
#
# USAGE:
#
#   pip install Babel
#   python setup.py extract_messages
#
# SEE ALSO:
#
#   http://babel.pocoo.org/en/latest/setup.html#extract-messages
#
[extract_messages]
input_dirs = dob
# FIXME/2018-04-22: (lb): Add locale files.
#output_file = dob/locale/dob.pot
output_file = messages.pot

[flake8]
exclude = build/*.py, docs/*.py
max-line-length = 89
# See list of error codes (we can list here to ignore):
#
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#
# - Project-agnostic, universal behavior (that supports and enforces this
#   and similar projects' style guides, i.e., this developer's preferences):
#
#   - ✓ W391: blank line at end of file
#
#       - (lb): Personal preference. So that, e.g., Vim's <C-End> is predictable
#               and goes to first column of an empty last line, rather than to
#               some unknown last column of a nonempty last line.
#
#   - ✓ W503 line break before binary operator
#
#       - (lb): I'm with Knuth, for readability, because columns align.
#
#               Prefer this:
#
#                   if (some_thing
#                       and another
#                       and another_thing):
#
#               over this:
#
#                   if (some_thing and
#                       another and
#                       another_thing):
#
# - Project- and dependency-specific, less common options:
#
#   - ✗ W605 invalid escape sequence:
#
#       - Specific to some Click library usage.
#         - (lb): Was warned on regex, e.g., '\d{2}' was flagged.
#         - (lb): Was warned on escape in Click help string, e.g., 'blah \# blah'.
#
ignore = W391,W503,W605

[isort]
# See: setup.cfg's [flake8] max-line-length = 89.
line_length = 89
# multi_line_output: 3 - Vertical Hanging Indent.
multi_line_output = 3
not_skip = __init__.py
known_third_party =
    # SYNC_ME: setup.py:requirements
    ansiwrap
    appdirs
    # backports
    click
    click-alias
    colorama
    configobj
    inflector
    humanfriendly
    pedantic_timedelta
    lazy_import
    nark
    prompt_toolkit
    editor
    # FIXME/2020-01-05 17:38: Remove references to 'six'!
    six
    tabulate
    texttable
    # Testing packages.
    faker
    factory
    fauxfactory
    freezegun
    # past
    pytest
    pytest_factoryboy
known_first_party = gettext
sections = STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[tool:pytest]
addopt =
	--tb=short
	--strict
	--rsx

